<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/inapoiAn"
        android:layout_width="144dp"
        android:layout_height="56dp"
        android:backgroundTint="@color/pepperred"
        android:fontFamily="@font/archivo_black"
        android:text="@string/back"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.011" />

    <ImageView
        android:id="@+id/imganim1"
        android:layout_width="320dp"
        android:layout_height="250dp"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/imagine"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/imganim2"
        android:layout_width="320dp"
        android:layout_height="250dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/imagine"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textAnimale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/archivo_black"
        android:text="@string/TitluAnimale"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.014" />

    <Button
        android:id="@+id/alegA1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="125dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="18dp"
        android:fontFamily="@font/archivo_black"
        android:text="@string/This"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imganim1"
        tools:text="@string/This" />

    <Button
        android:id="@+id/alegA2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="18dp"
        android:fontFamily="@font/archivo_black"
        android:text="@string/That"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imganim2"
        tools:text="@string/That" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/archivo_black"
        android:text="@string/Or"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/alegA2"
        app:layout_constraintStart_toEndOf="@+id/alegA1"
        app:layout_constraintTop_toBottomOf="@+id/imganim1" />

</androidx.constraintlayout.widget.ConstraintLayout>