<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/topA"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_marginStart="3dp"
        android:contentDescription="@string/buton"
        android:fontFamily="@font/archivo_black"
        android:text="@string/anim"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/divider"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/topM"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_marginTop="91dp"
        android:layout_marginBottom="91dp"
        android:contentDescription="@string/buton"
        android:fontFamily="@font/archivo_black"
        android:text="@string/masina"
        app:layout_constraintBottom_toTopOf="@+id/TopO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topA" />

    <Button
        android:id="@+id/TopO"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:contentDescription="@string/buton"
        android:fontFamily="@font/archivo_black"
        android:text="@string/oras"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/top1"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.406"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/top2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="256dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.406"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/top3"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="172dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.406"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginStart="268dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/archivo_black"
        android:text="@string/Top"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/Top" />

    <View
        android:id="@+id/divider"
        android:layout_width="23dp"
        android:layout_height="409dp"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="8dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.333" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>