<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundaleditat"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/Anim"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/gold"
        android:fontFamily="@font/archivo_black"
        android:onClick="animale"
        android:text="@string/anim"
        android:textColor="#000000"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.941" />

    <Button
        android:id="@+id/Cars"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/gold"
        android:fontFamily="@font/archivo_black"
        android:onClick="masini"
        android:text="@string/masina"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.941"
        app:shapeAppearance="@style/TextAppearance.Compat.Notification" />

    <Button
        android:id="@+id/City"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/gold"
        android:fontFamily="@font/archivo_black"
        android:onClick="orase"
        android:text="@string/oras"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.915"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.941" />

    <Button
        android:id="@+id/button"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="@color/gold"
        android:contentDescription="@string/Top"
        android:fontFamily="@font/archivo_black"
        android:text="@string/Top"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/Anim"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>